--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -1,15 +1,77 @@
 nav {
-  height: 120px;
+  display: flex;
+  flex-direction: column;
   width: 100%;
-  background-color: rgb(120, 150, 120) ;
+}
+
+#website-info {
+  background-color: white;
+  width: 100%;
   padding-left: 5%;
   padding-right: 5%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: baseline;
+  position: sticky;
+  top: 0px;
+  font-size: 1.2em;
+  z-index: 6;
+  img {
+    width: 100%;
+  }
+}
+
+header {
+  width: 100%;
+  padding-top: 1.5%;
+  padding-bottom: 1.5%;
+  text-align: center;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 1.5em;
+}
+
+#restaurant-pic {
+  height: 300px;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+#restaurant-nav {
+  width: 100%;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  position: fixed;
+  position: sticky;
   top: 0;
+  background-color: white;
+  box-shadow: 0em 0.5em 0.5em -0.5em gray;
+  .restaurant-info {
+    display: flex;
+    flex-direction: column;
+    label {
+      font-size: 2em;
+      margin-bottom: 5%;
+    }
+    div {
+      margin-bottom: 1%;
+    }
+  }
+  .search-cart {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    i {
+      margin-right: 5%;
+    }
+  }
 }
 
 .left-nav {
