Add hover effects and cleaen up padding/margins

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -12,7 +12,7 @@ html {
   z-index: 99;
   border: none;
   outline: none;
-  background-color: darkblue;
+  background-color: black;
   color: white;
   cursor: pointer;
   padding: 0.7em;
