--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,8 +32,8 @@
         <div id="contact-us">Contact Us</div>
       </div>
       <div class="user-buttons">
-        <span id="register">Register</span>
         <span id="login">Login</span>
+        <span id="register">Register</span>
       </div>
     </header>
     <!-- Restaurant Image -->
@@ -72,6 +72,7 @@
               <label>Big Mac</label>
               <div>Classic Big Mac</div>
               <div>$3.15</div>
+              <button id="add-to-cart">Add to Cart</button>
             </div>
             <img src="https://i.imgur.com/CUG0Aof.jpeg">
             </article>
@@ -80,6 +81,7 @@
                 <label>Big Mac</label>
                 <div>Classic Big Mac</div>
                 <div>$3.15</div>
+                <button id="add-to-cart">Add to Cart</button>
               </div>
               <img src="https://i.imgur.com/CUG0Aof.jpeg">
               </article>
@@ -88,6 +90,7 @@
                   <label>Big Mac</label>
                   <div>Classic Big Mac</div>
                   <div>$3.15</div>
+                  <button id="add-to-cart">Add to Cart</button>
                 </div>
                 <img src="https://i.imgur.com/CUG0Aof.jpeg">
                 </article>
@@ -96,6 +99,7 @@
                     <label>Big Mac</label>
                     <div>Classic Big Mac</div>
                     <div>$3.15</div>
+                    <button id="add-to-cart">Add to Cart</button>
                   </div>
                   <img src="https://i.imgur.com/CUG0Aof.jpeg">
                   </article>
@@ -104,6 +108,7 @@
                       <label>Big Mac</label>
                       <div>Classic Big Mac</div>
                       <div>$3.15</div>
+                      <button id="add-to-cart">Add to Cart</button>
                     </div>
                     <img src="https://i.imgur.com/CUG0Aof.jpeg">
                     </article>
@@ -123,6 +128,7 @@
             <div>$3.15</div>
           </article>
         </div>
+        <button type="submit" id="place-order">Place Order</button>
       </section>
     </div>
   </main>
