--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -2,74 +2,51 @@ nav {
   display: flex;
   flex-direction: column;
   width: 100%;
-}
-
-#website-info {
-  background-color: white;
-  width: 100%;
-  padding-left: 5%;
-  padding-right: 5%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: baseline;
-  position: sticky;
-  top: 0px;
-  font-size: 1.2em;
-  z-index: 6;
-  img {
+  #website-info {
+    background-color: white;
     width: 100%;
-  }
-}
-
-header {
-  width: 100%;
-  padding-top: 1.5%;
-  padding-bottom: 1.5%;
-  text-align: center;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-size: 1.5em;
-}
-
-#restaurant-pic {
-  height: 300px;
-  width: 100%;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-#restaurant-nav {
-  width: 100%;
-  padding-left: 5%;
-  padding-right: 5%;
-  padding-top: 2%;
-  padding-bottom: 2%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  position: sticky;
-  top: 0;
-  background-color: white;
-  box-shadow: 0em 0.5em 0.5em -0.5em gray;
-  .restaurant-info {
-    display: flex;
-    flex-direction: column;
-    label {
-      font-size: 2em;
-      margin-bottom: 5%;
-    }
-    div {
-      margin-bottom: 1%;
-    }
-  }
-  .search-cart {
+    padding: 1.5% 5% 1.5% 5%;
+    text-align: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 1.5em;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     align-items: center;
-    i {
-      margin-right: 5%;
+    position: sticky;
+    top: 0px;
+    font-size: 1.2em;
+    z-index: 6;
+  }
+  #restaurant-pic {
+    height: 300px;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+  #restaurant-nav {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: 100%;
+    padding: 2% 5% 2% 5%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    background-color: white;
+    box-shadow: 0em 0.5em 0.5em -0.5em gray;
+    .restaurant-info {
+      display: flex;
+      flex-direction: column;
+      label {
+        font-size: 2.5em;
+        margin-bottom: 5%;
+      }
+      div {
+        margin-bottom: 1%;
+      }
     }
   }
 }
@@ -78,43 +55,45 @@ header {
   display: flex;
   flex-direction: row;
   align-items: center;
+  #logo {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 2.5em;
+    margin-right: 0.5em;
+    cursor: pointer;
+  }
+  #contact-us {
+    cursor: pointer;
+  }
 }
 
-#logo {
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-size: 2.5em;
-  margin-right: 0.5em;
-  cursor: pointer;
-}
-
-#search {
-  height: 1.5em;
-  margin-right: 1em;
-  border: 1px solid gray;
-  padding-top: 0.75em;
-  padding-bottom: 0.75em;
-}
-
-#contact-us {
-  cursor: pointer;
-}
-
-.user_buttons {
+.user-buttons {
   display: flex;
   flex-direction: row;
   align-items: center;
+  #login {
+    margin-right: 1em;
+    cursor: pointer;
+  }
+  #register {
+    margin-right: 1em;
+    cursor: pointer;
+  }
 }
 
-#register {
-  margin-right: 1em;
-  cursor: pointer;
-}
-
-#login {
-  margin-right: 1em;
-  cursor: pointer;
-}
-
-#cart {
-  cursor: pointer;
+.search-cart {
+  font-size: 1.2em;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  i {
+    margin-right: 5%;
+    cursor: pointer;
+  }
+  #search {
+    height: 1.5em;
+    margin-right: 1em;
+    border: 1px solid gray;
+    padding-top: 0.75em;
+    padding-bottom: 0.75em;
+  }
 }
