display main page with data from database with ajax requests

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -95,6 +95,7 @@ body {
         font-size: 1.8em;
       }
       div {
+        text-align: left;
         margin-top: 1%;
         margin-bottom: 2%;
         font-size: 1em;
