--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,118 +20,11 @@
   <script src="/vendor/jquery-3.0.0.js"></script>
   <!-- App JS -->
   <script defer src="/scripts/app.js"></script>
+  <script defer src="/public/scripts/dishes.js"></script>
 </head>
 
 <body>
-<!-- Top nav bar (fixed) -->
-  <nav>
-    <!-- Website Navbar -->
-    <header id="website-info">
-      <div class="left-nav">
-        <span id="logo">Logo</span>
-        <div id="contact-us">Contact Us</div>
-      </div>
-      <div class="user-buttons">
-        <span id="login">Login</span>
-        <span id="register">Register</span>
-      </div>
-    </header>
-    <!-- Restaurant Image -->
-    <div id="restaurant-pic" style="background-image: url('https://i.imgur.com/ughbGCU.jpeg')"></div>
-     <!-- Restaurant Information -->
-     <section id="restaurant-nav">
-       <div class="restaurant-info">
-         <label>Restaurant Name</label>
-         <div>1234 Test Ave</div>
-         <div>Phone Number</div>
-      </div>
-      <div class="search-cart">
-        <i id="cart" class="fa-solid fa-cart-shopping"></i>
-        <input type="text" id="search" onkeyup="searchDishes()" placeholder="Search for a dish...">
-      </div>
-    </section>
-  </nav>
-  <main class="container">
-
-    <!-- Back to top button (fixed) -->
-    <button id="back-to-top"><i class="fa-solid fa-arrow-up"></i></button>
-    <!-- Category nav -->
-    <div class="order-selection">
-      <section class="dishes">
-        <div class="categories">
-          <a>appetizer</a>
-          <a>pizza</a>
-          <a>burger</a>
-          <a>Veggies</a>
-          <a>drinks</a>
-          <a>dessert</a>
-        </div>
-        <section id="dishes-container">
-          <article>
-            <div class="dish-detail">
-              <label>Big Mac</label>
-              <div>Classic Big Mac</div>
-              <div>$3.15</div>
-              <button id="add-to-cart">Add to Cart</button>
-            </div>
-            <img src="https://i.imgur.com/CUG0Aof.jpeg">
-            </article>
-            <article>
-              <div class="dish-detail">
-                <label>Big Mac</label>
-                <div>Classic Big Mac</div>
-                <div>$3.15</div>
-                <button id="add-to-cart">Add to Cart</button>
-              </div>
-              <img src="https://i.imgur.com/CUG0Aof.jpeg">
-              </article>
-              <article>
-                <div class="dish-detail">
-                  <label>Big Mac</label>
-                  <div>Classic Big Mac</div>
-                  <div>$3.15</div>
-                  <button id="add-to-cart">Add to Cart</button>
-                </div>
-                <img src="https://i.imgur.com/CUG0Aof.jpeg">
-                </article>
-                <article>
-                  <div class="dish-detail">
-                    <label>Big Mac</label>
-                    <div>Classic Big Mac</div>
-                    <div>$3.15</div>
-                    <button id="add-to-cart">Add to Cart</button>
-                  </div>
-                  <img src="https://i.imgur.com/CUG0Aof.jpeg">
-                  </article>
-                  <article>
-                    <div class="dish-detail">
-                      <label>Big Mac</label>
-                      <div>Classic Big Mac</div>
-                      <div>$3.15</div>
-                      <button id="add-to-cart">Add to Cart</button>
-                    </div>
-                    <img src="https://i.imgur.com/CUG0Aof.jpeg">
-                    </article>
-        </section>
-      </section>
-      <!-- Order Summary Box -->
-      <section id="order-summary">
-        <h2>Your Cart</h2>
-        <div><i class="fa-solid fa-location-dot"></i> Pick up at 1234 Test Ave</div>
-        <div><i class="fa-regular fa-clock"></i> Estimated Time</div>
-        <div class="cart-detail">
-          <article>
-            <div class="dish-detail">
-              <label>Big Mac</label>
-              <div>Classic Big Mac</div>
-              </div>
-            <div>$3.15</div>
-          </article>
-        </div>
-        <button type="submit" id="place-order">Place Order</button>
-      </section>
-    </div>
-  </main>
+  Welcome!
 </body>
 
 </html>
