--- a/views/dishes.ejs
+++ b/views/dishes.ejs
@@ -19,8 +19,8 @@
   <!-- External JS -->
   <script src="/vendor/jquery-3.0.0.js"></script>
   <!-- App JS -->
-  <script defer src="/scripts/app.js"></script>
   <script type="text/javascript" src="/scripts/dishes.js"></script>
+  <script defer src="/scripts/app.js"></script>
 </head>
 
 <body>
@@ -60,12 +60,13 @@
     <div class="order-selection">
       <section class="dishes">
         <div class="categories">
-          <a>appetizer</a>
-          <a>pizza</a>
-          <a>burger</a>
-          <a>Veggies</a>
-          <a>drinks</a>
-          <a>dessert</a>
+          <a>All</a>
+          <a>Appetizer</a>
+          <a>Pizza</a>
+          <a>Pasta</a>
+          <a>Burger</a>
+          <a>Drinks</a>
+          <a>Dessert</a>
         </div>
         <section id="dishes-container"></section>
       </section>
