--- a/views/dishes.ejs
+++ b/views/dishes.ejs
@@ -74,15 +74,7 @@
         <h2>Your Cart</h2>
         <div><i class="fa-solid fa-location-dot"></i> Pick up at 1234 Test Ave</div>
         <div><i class="fa-regular fa-clock"></i> Estimated Time</div>
-        <div class="cart-detail">
-          <article>
-            <div class="dish-detail">
-              <label>Big Mac</label>
-              <div>Classic Big Mac</div>
-              </div>
-            <div>$3.15</div>
-          </article>
-        </div>
+        <div class="cart-detail"></div>
         <button type="submit" id="place-order">Place Order</button>
       </section>
     </div>
