--- a/views/dishes.ejs
+++ b/views/dishes.ejs
@@ -20,6 +20,7 @@
   <script src="/vendor/jquery-3.0.0.js"></script>
   <!-- App JS -->
   <script type="text/javascript" src="/scripts/dishes.js"></script>
+  <script type="text/javascript" src="/scripts/cart.js"></script>
   <script defer src="/scripts/app.js"></script>
 </head>
 
