--- a/views/dishes.ejs
+++ b/views/dishes.ejs
@@ -36,6 +36,7 @@
         <span id="login">Login</span>
         <span id="register">Register</span>
       </div>
+      <a id="nav-toggle"><i class="fa-solid fa-bars"></i></a>
     </header>
     <!-- Restaurant Image -->
     <div id="restaurant-pic" style="background-image: url('https://i.imgur.com/ughbGCU.jpeg')"></div>
@@ -53,7 +54,6 @@
     </section>
   </nav>
   <main class="container">
-
     <!-- Back to top button (fixed) -->
     <button id="back-to-top"><i class="fa-solid fa-arrow-up"></i></button>
     <!-- Category nav -->
