--- a/views/dishes.ejs
+++ b/views/dishes.ejs
@@ -78,6 +78,7 @@
         <div><i class="fa-regular fa-clock"></i> Estimated Time</div>
         <div class="cart-detail"></div>
         <button type="submit" id="place-order">Place Order</button>
+        <button type="submit" id="send-SMS">Send SMS</button>
       </section>
     </div>
   </main>
