--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Login</title>
+  <title>Register</title>
 
   <meta charset="UTF-8" >
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
@@ -25,8 +25,8 @@
     <%- include('partials/_header') %>
   </nav>
   <main>
-    <form class="form" method="post" action="/api/login">
-      <div class="login-register-title">Login</div>
+    <form class="form" method="post" action="/api/register">
+      <div class="login-register-title">Register</div>
       <div class="form-input">
         <label class="name-label" for="inputFirstName">First Name</label>
         <input class="name-inpnut" type="text" name="firstName" id="inputFirstName" placeholder="First Name">
@@ -43,8 +43,9 @@
         <label class="password-label" for="inputPassword">Password</label>
         <input class="password-input" type="password" name="password" id="inputPassword" placeholder="Password">
       </div>
-      <button class="submit-button" type="submit">Login</button>
+      <button class="submit-button" type="submit">Register</button>
     </form>
   </main>
 </body>
 </html>
+
