Add 'status' to order table schema

--- a/views/dishes.ejs
+++ b/views/dishes.ejs
@@ -21,6 +21,7 @@
   <!-- App JS -->
   <script type="text/javascript" src="/scripts/dishes.js"></script>
   <script type="text/javascript" src="/scripts/cart.js"></script>
+  <script type="text/javascript" src="/scripts/orders.js"></script>
   <script defer src="/scripts/app.js"></script>
 </head>
 
