style orders page, implement dynamic time estimate in cart

--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -78,7 +78,19 @@ nav {
     margin-right: 1em;
     cursor: pointer;
   }
+  p {
+    margin-right: 1%;
+  }
+  .logout {
+    padding: 0.5em 1em 0.5em 1em;
+    border-radius: 2em;
+    border: none;
+    font-size: 1em;
+    background-origin: rgb(206, 229, 244);
+    cursor: pointer;
+  }
 }
+
 
 .search-cart {
   font-size: 1.2em;
