--- a/styles/orders.scss
+++ b/styles/orders.scss
@@ -1,20 +1,17 @@
-body {
+  body {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  // min-height: 100vh;
   background-color: lightgrey;
-  // background: rgb(163, 208, 219);
-  // background: linear-gradient(
-  //   227deg,
-  //   rgba(163, 208, 219, 1) 0%,
-  //   rgba(163, 176, 219, 1) 20%,
-  //   rgba(163, 173, 219, 1) 34%,
-  //   rgba(163, 219, 208, 1) 59%,
-  //   rgba(163, 208, 219, 1) 74%,
-  //   rgba(163, 208, 219, 1) 100%
-  // );
+}
+
+.container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: baseline;
+  align-items: center;
 }
 
 #orders-container {
@@ -23,31 +20,41 @@ body {
   flex-direction: column;
   border-radius: 10%;
   align-items: center;
+  width: 80%;
   article {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     background-color: #fcfcfb;
     width: 100%;
     margin-top: 1%;
     margin-bottom: 1%;
     padding: 3%;
     border-radius: 1em;
-    label {
-        margin-bottom: 2%;
-        font-size: 1.8em;
-    }
-    div {
-        text-align: left;
-        margin-top: 1%;
-        margin-bottom: 2%;
-        font-size: 1em;
-    }
-    .orderId {
-      display: none;
-    }
-    img {
-      width: 30%;
+    .order-detail {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      label {
+          margin-bottom: 2%;
+          font-size: 1.8em;
+      }
+      div {
+          text-align: left;
+          margin-top: 1%;
+          margin-bottom: 2%;
+          font-size: 1em;
+      }
+      button {
+        width: 50%;
+        padding: 0.5em 1em 0.5em 1em;
+        border-radius: 2em;
+        border: none;
+        font-size: 0.8em;
+        background-color: rgb(206, 229, 244);
+        cursor: pointer;
+      }
     }
   }
   article:hover {
