--- a/views/dishes.ejs
+++ b/views/dishes.ejs
@@ -66,7 +66,7 @@
       <section id="order-summary">
         <h2>Your Cart</h2>
         <div><i class="fa-solid fa-location-dot"></i> Pick up at 1234 Test Ave</div>
-        <div><i class="fa-regular fa-clock"></i> Estimated Time</div>
+        <div><i class="fa-regular fa-clock"></i> Estimated Time: <output id="cart-est">0</output> minutes</div>
         <div class="cart-detail"></div>
         <button type="submit" id="place-order">Place Order</button>
       </section>
