style main page and login page

--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -27,6 +27,7 @@ nav {
   }
   #restaurant-nav {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    opacity: 80%;
     width: 100%;
     padding: 2% 5% 2% 5%;
     display: flex;
