--- a/styles/login-register.scss
+++ b/styles/login-register.scss
@@ -1,3 +1,45 @@
+body {
+  background: rgb(0,0,96);
+  background: linear-gradient(90deg, rgba(0,0,96,1) 0%, rgba(128,128,171,1) 50%, rgba(0,212,255,1) 100%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+main {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 #form-container {
-  
+  margin-top: 2%;
+  width: 70%;
+  display: flex;
+  flex-direction: row;
+  border-radius: 1.5em;
+  background-color: #fcfcfb;
+  box-shadow: 0.2em 0.2em 0.5em gray;
+  #restaurant-pic {
+    width: 50%;
+    height: 50%;
+    img {
+      padding: 2%;
+      max-width: 100%;
+      max-height: 100%;
+      border-radius: 1.5em;
+    }
+  }
+  .form {
+    padding-left: 4%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: baseline;
+    p {
+      margin-top: 1%;
+    }
+  }
 }
