--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,18 +3,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  // min-height: 100vh;
-  background-color: lightgrey;
-  // background: rgb(163, 208, 219);
-  // background: linear-gradient(
-  //   227deg,
-  //   rgba(163, 208, 219, 1) 0%,
-  //   rgba(163, 176, 219, 1) 20%,
-  //   rgba(163, 173, 219, 1) 34%,
-  //   rgba(163, 219, 208, 1) 59%,
-  //   rgba(163, 208, 219, 1) 74%,
-  //   rgba(163, 208, 219, 1) 100%
-  // );
+  background: rgb(255,211,148);
+  background: linear-gradient(90deg, rgba(255,211,148,1) 0%, rgba(245,185,185,1) 50%, rgba(231,102,102,1) 100%); 
 }
 
 
@@ -26,7 +16,8 @@ body {
   flex-direction: column;
   align-items: center;
   z-index: 2;
-  background-color: lightgray;
+  background: rgb(255,211,148);
+  background: linear-gradient(90deg, rgba(255,211,148,1) 0%, rgba(245,185,185,1) 50%, rgba(231,102,102,1) 100%);
   border-radius: 5%;
 }
 
@@ -121,11 +112,11 @@ body {
 }
 
 .remove-from-cart {
-  padding: 0.5em 1em 0.5em 1em;
-  border-radius: 2em;
+  padding: 0;
   border: none;
   font-size: 1em;
-  background-color: rgb(206, 229, 244);
+  color: rgb(108, 195, 252);
+  background-color: #fcfcfb;
   cursor: pointer;
 }
 
