--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,6 +14,7 @@
   <!-- App CSS -->
   <link rel="stylesheet" href="/styles/layout.css" />
   <link rel="stylesheet" href="/styles/nav.css" />
+  <link rel="stylesheet" href="/styles/login-register.css" />
   <!-- External JS -->
   <script src="/vendor/jquery-3.0.0.js"></script>
   <!-- App JS -->
@@ -26,8 +27,12 @@
   </nav>
   <main>
     <div id="form-container">
-      <div id="restaurant-pic" style="background-image: url('https://i.imgur.com/ughbGCU.jpeg')"></div>
+      <div id="restaurant-pic">
+        <img src="https://i.imgur.com/WPcy3B6.jpeg">
+      </div>
       <form class="form" method="post" action="/api/login">
+        <p>Hello!</p>
+        <P> Welcome to our restaurant </p>
         <div class="login-register-title">Login</div>
         <div class="form-input">
           <label class="name-label" for="inputFirstName">First Name</label>
