Edit login and register pages to seed a '1' in the phone input forms

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -37,7 +37,7 @@
       </div>
       <div class="form-input">
         <label class="phone-label" for="inputPhone">Phone Number</label>
-        <input class="phone-input" type="tel" name="phone" id="inputPhone" placeholder="123-456-7890">
+        <input class="phone-input" value="1" type="tel" name="phone" id="inputPhone" placeholder="123-456-7890">
       </div>
       <div class="form-input">
         <label class="password-label" for="inputPassword">Password</label>
