style register and login page

--- a/styles/orders.scss
+++ b/styles/orders.scss
@@ -3,7 +3,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: lightgrey;
+  background: rgb(0,0,96);
+  background: linear-gradient(90deg, rgba(0,0,96,1) 0%, rgba(128,128,171,1) 50%, rgba(0,212,255,1) 100%);
 }
 
 .container {
