--- a/views/dishes.ejs
+++ b/views/dishes.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Home Page</title>
+  <title>Lighthouse Bistro</title>
 
   <meta charset="UTF-8" >
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
@@ -34,7 +34,7 @@
      <!-- Restaurant Information -->
      <section id="restaurant-nav">
        <div class="restaurant-info">
-         <label>Restaurant Name</label>
+         <label>The best</label>
          <div>1234 Test Ave</div>
          <div>Phone Number</div>
       </div>
