--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,24 +32,25 @@
       </div>
       <form class="form" method="post" action="/api/login">
         <p>Hello!</p>
-        <P> Welcome to our restaurant </p>
-        <div class="login-register-title">Login</div>
+        <P> Welcome to Lighthouse Bistro </p>
+        <div class="login-register-title"><span>Login</span> to Your Account</div>
         <div class="form-input">
-          <label class="name-label" for="inputFirstName">First Name</label>
-          <input class="name-inpnut" type="text" name="firstName" id="inputFirstName" placeholder="First Name">
+          <!-- <label class="name-label" for="inputFirstName">First Name</label> -->
+          <input class="name-input" type="text" name="firstName" id="inputFirstName" placeholder="First Name">
         </div>
         <div class="form-input">
-          <label class="name-label" for="inputLastName">Last Name</label>
-          <input class="name-inpnut" type="text" name="lastName" id="inputLastName" placeholder="Last Name">
+          <!-- <label class="name-label" for="inputLastName">Last Name</label> -->
+          <input class="name-input" type="text" name="lastName" id="inputLastName" placeholder="Last Name">
         </div>
         <div class="form-input">
-          <label class="phone-label" for="inputPhone">Phone Number</label>
+          <!-- <label class="phone-label" for="inputPhone">Phone Number</label> -->
           <input class="phone-input" value="1" type="tel" name="phone" id="inputPhone" placeholder="123-456-7890">
         </div>
         <div class="form-input">
-          <label class="password-label" for="inputPassword">Password</label>
+          <!-- <label class="password-label" for="inputPassword">Password</label> -->
           <input class="password-input" type="password" name="password" id="inputPassword" placeholder="Password">
         </div>
+        <a href="./register">Sign up for an Account</a>
         <button class="submit-button" type="submit">Login</button>
       </form>
     </div>
