--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,6 +1,6 @@
 <header id="website-info">
   <div class="left-nav">
-    <span id="logo">Logo</span>
+    <span id="logo">Lighthouse Bistro</span>
   </div>
   <div class="user-buttons">
     <% if (!user) { %>
