--- a/views/register.ejs
+++ b/views/register.ejs
@@ -31,23 +31,26 @@
         <img src="https://i.imgur.com/WPcy3B6.jpeg">
       </div>
       <form class="form" method="post" action="/api/register">
-        <div class="login-register-title">Register</div>
+        <p>Hello!</p>
+        <P> Welcome to Lighthouse Bistro </p>
+        <div class="login-register-title"><span>Register</span> for an Account</div>
         <div class="form-input">
-          <label class="name-label" for="inputFirstName">First Name</label>
-          <input class="name-inpnut" type="text" name="firstName" id="inputFirstName" placeholder="First Name">
+          <!-- <label class="name-label" for="inputFirstName">First Name</label> -->
+          <input class="name-input" type="text" name="firstName" id="inputFirstName" placeholder="First Name">
         </div>
         <div class="form-input">
-          <label class="name-label" for="inputLastName">Last Name</label>
-          <input class="name-inpnut" type="text" name="lastName" id="inputLastName" placeholder="Last Name">
+          <!-- <label class="name-label" for="inputLastName">Last Name</label> -->
+          <input class="name-input" type="text" name="lastName" id="inputLastName" placeholder="Last Name">
         </div>
         <div class="form-input">
-          <label class="phone-label" for="inputPhone">Phone Number</label>
+          <!-- <label class="phone-label" for="inputPhone">Phone Number</label> -->
           <input class="phone-input" value="1" type="tel" name="phone" id="inputPhone" placeholder="123-456-7890">
         </div>
         <div class="form-input">
-          <label class="password-label" for="inputPassword">Password</label>
+          <!-- <label class="password-label" for="inputPassword">Password</label> -->
           <input class="password-input" type="password" name="password" id="inputPassword" placeholder="Password">
         </div>
+        <a href="./login">Login to Existing Account</a>
         <button class="submit-button" type="submit">Register</button>
       </form>
     </main>
