--- a/styles/login-register.scss
+++ b/styles/login-register.scss
@@ -23,23 +23,72 @@ main {
   box-shadow: 0.2em 0.2em 0.5em gray;
   #restaurant-pic {
     width: 50%;
-    height: 50%;
+    height: 100%;
     img {
-      padding: 2%;
+      padding: 1%;
       max-width: 100%;
       max-height: 100%;
       border-radius: 1.5em;
     }
   }
   .form {
-    padding-left: 4%;
+    padding-left: 5%;
+    padding-right: 5%;
     width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: baseline;
+    align-items: center;
     p {
+      align-self: baseline;
       margin-top: 1%;
+      margin-bottom: 1%;
+      font-size: 1.5em;
+      font-style: italic;
+    }
+    .login-register-title {
+      width: 100%;
+      margin-top: 2%;
+      margin-bottom: 2%;
+      font-size: 2em;
+      span {
+      font-weight: bold;
+      color: rgb(0,0,96);
+      color: linear-gradient(90deg, rgba(0,0,96,1) 0%, rgba(128,128,171,1) 50%, rgba(0,212,255,1) 100%);
+      }
+    }
+    .form-input {
+      display: flex;
+      flex-direction: column;
+      margin-top: 3%;
+      margin-bottom: 3%;
+      padding-right: 3%;
+      width: 100%;
+      input {
+        border: none;
+        border-bottom: 1px solid black;
+        outline: none;
+      }
+    }
+    button {
+      width: 97.5%;
+      height: 2.5em;
+      margin-right: auto;
+      border: none;
+      border-radius: 0.2em;
+      color: white;
+      background: rgb(0,0,96);
+      background: linear-gradient(90deg, rgba(0,0,96,1) 0%, rgba(128,128,171,1) 50%, rgba(0,212,255,1) 100%);
+      cursor: pointer;
+    }
+    button:hover {
+      transform: scale(1.01);
+    }
+    a {
+      width: 100%;
+      margin-top: 3%;
+      margin-bottom: 3%;
+      text-decoration: none;
     }
   }
 }
