--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,8 +3,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: rgb(255,211,148);
-  background: linear-gradient(90deg, rgba(255,211,148,1) 0%, rgba(245,185,185,1) 50%, rgba(231,102,102,1) 100%); 
+  background: rgb(236,160,160);
+  background: linear-gradient(166deg, rgba(236,160,160,1) 0%, rgba(199,162,116,1) 51%, rgba(236,158,30,1) 100%); 
 }
 
 
@@ -16,8 +16,8 @@ body {
   flex-direction: column;
   align-items: center;
   z-index: 2;
-  background: rgb(255,211,148);
-  background: linear-gradient(90deg, rgba(255,211,148,1) 0%, rgba(245,185,185,1) 50%, rgba(231,102,102,1) 100%);
+  background: rgb(236,160,160);
+  background: linear-gradient(166deg, rgba(236,160,160,1) 0%, rgba(199,162,116,1) 51%, rgba(236,158,30,1) 100%);
   border-radius: 5%;
 }
 
@@ -171,6 +171,9 @@ body {
         font-size: 1em;
       }
     }
+  }
+  .footer {
+    text-align: end;
   }
 }
 
