Add menu items to database seeds

--- a/views/dishes.ejs
+++ b/views/dishes.ejs
@@ -53,12 +53,12 @@
       <section class="dishes">
         <div class="categories">
           <a>All</a>
-          <a>Appetizer</a>
           <a>Pizza</a>
           <a>Pasta</a>
-          <a>Burger</a>
+          <a>Sandwiches</a>
+          <a>Appetizers</a>
+          <a>Desserts</a>
           <a>Drinks</a>
-          <a>Dessert</a>
         </div>
         <section id="dishes-container"></section>
       </section>
