--- a/views/receipt.ejs
+++ b/views/receipt.ejs
@@ -27,10 +27,13 @@
   <nav>
     <header id="website-info">
       <div class="left-nav">
-        <span id="logo">Logo</span>
-        <div id="contact-us">Contact Us</div>
+        <span id="logo">Lighthouse Bistro</span>
       </div>
-      <a id="nav-toggle"><i class="fa-solid fa-bars"></i></a>
+      <div class="user-buttons">
+        <form method="post" action="/logout">
+          <button type="submit" class="logout">Logout</button>
+        </form>
+      </div>
     </header>
   </nav>
   <main id="receipt">
