--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -24,3 +24,54 @@ html {
 #back-to-top:hover {
   transform: scale(1.1);
 }
+
+
+@media screen and (max-width: 1400px) {
+  #form-container {
+    flex-direction: column;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    width: 90%;
+    border-radius: 1.5em;
+    #restaurant-pic {
+      width: 100%;
+      img {
+        width: 100%;
+        height: 350px;
+        padding: 0%;
+        border-top-left-radius: 1.5em;
+        border-top-right-radius: 1.5em;
+        border-bottom-right-radius: 0;
+        border-bottom-left-radius: 0;
+        max-height: 50%;
+        object-fit: cover;
+      }
+    }
+    .form {
+      width: 100%;
+      padding-bottom: 5%;
+      padding-top: 2%;
+      p {
+        align-self: baseline;
+      }
+      .login-register-title {
+        margin-top: 5%;
+        text-align: center;
+      }
+    }
+  }
+  .order-selection {
+    flex-direction: column;
+    margin-left: 0%;
+    margin-right: 0%;
+    padding-left: 1%;
+    padding-right: 1%;
+    .dishes {
+      margin-left: 0%;
+    }
+    #order-summary {
+      width: 70%;
+      align-self: center;
+    }
+  }
+}
