--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,8 +3,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: rgb(236,160,160);
-  background: linear-gradient(166deg, rgba(236,160,160,1) 0%, rgba(199,162,116,1) 51%, rgba(236,158,30,1) 100%); 
+  background: linear-gradient(90deg, rgba(212,100,85,1) 0%, rgba(199,162,116,1) 51%, rgba(236,158,30,1) 100%);
 }
 
 
@@ -16,9 +15,9 @@ body {
   flex-direction: column;
   align-items: center;
   z-index: 2;
-  background: rgb(236,160,160);
-  background: linear-gradient(166deg, rgba(236,160,160,1) 0%, rgba(199,162,116,1) 51%, rgba(236,158,30,1) 100%);
-  border-radius: 5%;
+  // background: rgb(236,160,160);
+  // background: linear-gradient(166deg, rgba(236,160,160,1) 0%, rgba(199,162,116,1) 51%, rgba(236,158,30,1) 100%);
+  // border-radius: 5%;
 }
 
 .order-selection {
@@ -94,7 +93,7 @@ body {
     }
   }
   article:hover {
-    box-shadow: 0.2em 0.2em 0.5em gray;
+    box-shadow: 0.4em 0.4em 0.5em gray;
   }
 }
 
@@ -190,4 +189,6 @@ body {
   transform: scale(1.05);
 }
 
-
+#cart:hover {
+  transform: scale(1.2);
+}
