--- a/styles/receipt.scss
+++ b/styles/receipt.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: lightgrey;
+  background: linear-gradient(90deg, rgba(212,100,85,1) 0%, rgba(199,162,116,1) 51%, rgba(236,158,30,1) 100%);
   display: flex;
   flex-direction: column;
   align-items: center;
