--- a/views/dishes.ejs
+++ b/views/dishes.ejs
@@ -13,8 +13,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- App CSS -->
   <link rel="stylesheet" href="/styles/main.css" />
-  <link rel="stylesheet" href="/styles/layout.css" />
   <link rel="stylesheet" href="/styles/nav.css" />
+  <link rel="stylesheet" href="/styles/layout.css" />
 
   <!-- External JS -->
   <script src="/vendor/jquery-3.0.0.js"></script>
@@ -34,13 +34,12 @@
      <!-- Restaurant Information -->
      <section id="restaurant-nav">
        <div class="restaurant-info">
-         <label>The best</label>
+         <label>Bistro Done Differently.</label>
          <div>1234 Test Ave</div>
-         <div>Phone Number</div>
+         <div>123-456-7890</div>
       </div>
       <div class="search-cart">
         <i id="cart" class="fa-solid fa-cart-shopping"></i>
-        <input type="text" id="search" onkeyup="searchDishes()" placeholder="Search for a dish...">
       </div>
     </section>
   </nav>
